--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet" />
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/slick.css" />
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link href="css/styles.css" rel="stylesheet" />
 
     <!-- Favicon  -->
@@ -49,31 +49,14 @@
 
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="#intro">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li class="drop-down">
-                        <a href="">Drop Down</a>
+                    <li><a href="about.html">About Us</a></li>
+                    <li class="drop-down"><a href="portfolio.html">Portfolio</a>
                         <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li class="drop-down">
-                                <a href="#">Drop Down 2</a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                            <li><a href="#">Drop Down 5</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
                         </ul>
                     </li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -102,56 +85,61 @@
     <!-- end of header -->
 
     <!-- About Us -->
-    <div id="about" class="cards-1">
-        <div class="container">
+    <div id="about" class="mt-5">
+        <div class="container-fluid">
             <div class="row">
+                <!-- end of row -->
                 <div class="col-lg-12">
-                    <h2 class="about-header title">About Us</h2>
-                    <div class="underline"></div>
-                    <p class="text-center about-text">
-                        Bowden Moss Ltd is a refurbishment and fit out contractor based in Hertfordshire, which specialises and has over twenty years of experience in all aspects of construction in the industrial, commercial office and education sectors. We are committed to
-                        providing a high quality, professional service which ensures the outstanding levels of customer satisfaction.
-                    </p>
-                </div>
-                <!-- end of col -->
-            </div>
-            <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <!-- Card -->
-                    <div class="card">
-                        <img class="card-image" src="images/business.png" alt="alternative" />
-                        <div class="card-body">
-                            <h4 class="card-title">Reputation</h4>
-                            <p>
-                                Our reputation is built on quality, reliability and integrity and it’s these values that ensure our customers return to us for all their project needs.
-                            </p>
-                        </div>
-                    </div>
-                    <!-- end of card -->
+                    <!-- Services -->
+                    <section id="about-home" class="section-bg">
+                        <div class="container">
+                            <header class="section-header">
+                                <h3 class="section-title text-left">Who are we?</h3>
+                            </header>
 
-                    <!-- Card -->
-                    <div class="card">
-                        <img class="card-image" src="images/map.png" alt="alternative" />
-                        <div class="card-body">
-                            <h4 class="card-title">Projects</h4>
-                            <p>
-                                We are ideally situated to carry out projects throughout the south east including refurbishments, fit outs, alterations and dilapidation works.
+                            <hr>
+                            <p class="text-left about-text-home">
+                                Bowden Moss Ltd is a refurbishment and fit out contractor based in Hertfordshire, which specialises and has over twenty years of experience in all aspects of construction in the Industrial, Residential, Commercial office and Education sectors. We are
+                                committed to providing a high quality, professional service which ensures the outstanding levels of customer satisfaction.
                             </p>
-                        </div>
-                    </div>
-                    <!-- end of card -->
 
-                    <!-- Card -->
-                    <div class="card">
-                        <img class="card-image" src="images/construction.png" alt="alternative" />
-                        <div class="card-body">
-                            <h4 class="card-title">Experience</h4>
-                            <p>
-                                With a dedicated and experienced team we are able to manage any refurbishment and fit out requirement
-                            </p>
+
+
+                            <div class="row">
+                                <div class="col-md-3 col-lg-3 about-img">
+                                    <img src="images/acton8.jpg" alt="">
+                                    <div class="centered">
+                                        <h1 class="text-left">Commercial</h1>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-lg-3 about-img">
+                                    <img src="images/camden3.jpg" alt="">
+                                    <div class="centered">
+                                        <h1 class="text-left">Residential</h1>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-lg-3 about-img">
+                                    <img src="images/miltonkeynes8.jpg" alt="">
+                                    <div class="centered">
+                                        <h1 class="text-left">Office</h1>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-lg-3 about-img">
+                                    <img src="images/education5.jpg" alt="">
+                                    <div class="centered">
+                                        <h1 class="text-left">Education</h1>
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-lg d-flex justify-content-center text-center mt-4"> <a href="about.html">FIND OUT MORE</a></button>
+
                         </div>
-                    </div>
+                    </section>
+                    <!-- End of services -->
                 </div>
             </div>
         </div>
@@ -159,64 +147,75 @@
 
     <!-- end of About Us -->
 
-    <!-- Services -->
-    <section id="services" class="section-bg">
-        <div class="container">
-            <header class="section-header">
-                <h2 class="title text-center">Services</h2>
-                <div class="underline"></div>
-            </header>
+    <div class="container mb-5">
+        <header class="section-header">
+            <h3 class="section-title text-right">Recent Projects</h3>
+        </header>
 
-            <div class="row">
-                <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
-                    <div class="box">
-                        <h4><a href="">Warehouse refurbishments</a></h4>
-                        <p class="description">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, officia! </p>
-                    </div>
+        <hr>
+        <div class="row slider">
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/acton8.jpg" alt="">
                 </div>
-                <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
-                    <div class="box">
-                        <h4><a href="">Residential Building Services</a></h4>
-                        <p class="description">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, officia! </p>
-                    </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/acton5.jpg" alt="">
                 </div>
-
-                <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-                    <div class="box">
-                        <div class="icon">
-                            <i class="ion-ios-paper-outline" style="color: #3fcdc7"></i>
-                        </div>
-                        <h4><a href="">Office Refurbishments</a></h4>
-                        <p class="description">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, officia! </p>
-                    </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/rosebury-av2.jpg" alt="">
                 </div>
-                <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-                    <div class="box">
-                        <div class="icon">
-                            <i class="ion-ios-speedometer-outline" style="color: #41cf2e"></i>
-                        </div>
-                        <h4><a href="">Education Fitouts</a></h4>
-                        <p class="description">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, officia! </p>
-                    </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/rosebury-av3.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/leicester7.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/leicester6.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/cornhill5.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/cornhill6.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/heathrow2.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/heathrow4.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/acton8.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="details">
+                    <img src="images/acton8.jpg" alt="">
                 </div>
             </div>
         </div>
-    </section>
-    <!-- End of services -->
-
-    <!-- Home Slider  -->
-    <section id="slider" class="slider">
-        <h2 class="text-center">Recent Projects</h2>
-        <div class="slick">
-            <div class=""><img src="images/acton8.jpg" alt="" />hello</div>
-            <div class=""><img src="images/leicester7.jpg" alt="" />hello</div>
-            <div class=""><img src="images/acton8.jpg" alt="" />hello</div>
-        </div>
-    </section>
+    </div>
 
     <!-- Footer -->
 
@@ -226,27 +225,27 @@
                 <div class="row">
 
                     <div class="col-lg-4 col-md-6 footer-info">
-                        <h3>NewBiz</h3>
+                        <h3>Bowden Moss</h3>
                         <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat
                             mauris nunc congue.</p>
                     </div>
 
-                    <div class="col-lg-2 col-md-6 footer-links">
+                    <div class="col-lg-4 col-md-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">About us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Terms of service</a></li>
-                            <li><a href="#">Privacy policy</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-contact">
+                    <div class="col-lg-4 col-md-6 footer-contact">
                         <h4>Contact Us</h4>
                         <p>
-                            A108 Adam Street <br> New York, NY 535022<br> United States <br>
-                            <strong>Phone:</strong> +1 5589 55488 55<br>
+                            Aston Bury Farm, Aston Bury Lane, Stevenage, SG2 7EG, UK<br>
+                            <strong>Phone:</strong> 01438 579710<br>
                             <strong>Email:</strong> info@example.com<br>
                         </p>
 
@@ -258,14 +257,6 @@
                             <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
 
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-newsletter">
-                        <h4>Our Newsletter</h4>
-                        <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
                     </div>
 
                 </div>
@@ -283,9 +274,47 @@
 
         <script type="text/javascript" src="js/mobile-nav.js"></script>
 
-        <script type="text/javascript" src="js/slick.min.js"></script>
+        <script type="text/javascript" src="slick/slick.js"></script>
 
         <script src="js/scripts.js"></script>
+
+        <script>
+            $(".slider").slick({
+                dots: true,
+                infinite: true,
+                speed: 300,
+                autoplay: true,
+                autoplaySpeed: 2500,
+                slidesToShow: 4,
+                slidesToScroll: 4,
+                responsive: [{
+                        breakpoint: 1024,
+                        settings: {
+                            slidesToShow: 3,
+                            slidesToScroll: 3,
+                            infinite: true,
+                            dots: true,
+                        },
+                    }, {
+                        breakpoint: 600,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 2,
+                        },
+                    }, {
+                        breakpoint: 480,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            dots: false,
+                        },
+                    },
+                    // You can unslick at a given breakpoint now by adding:
+                    // settings: "unslick"
+                    // instead of a settings object
+                ],
+            });
+        </script>
 </body>
 
 </html>
